Prepared for deployment.

--- a/gdp_maps.ipynb
+++ b/gdp_maps.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "2701c997",
    "metadata": {},
    "outputs": [
@@ -88,6 +88,7 @@
     "import plotly.express as px\n",
     "import dash_bootstrap_components as dbc\n",
     "import pycountry\n",
+    "import os\n",
     "from dash import Dash, html, dcc\n",
     "from dash.dependencies import Output, Input\n",
     "from dash.exceptions import PreventUpdate\n",
@@ -198,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "9d4292d0",
    "metadata": {},
    "outputs": [
@@ -334,7 +335,8 @@
     ")\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    app.run()"
+    "    port = int(os.environ.get(\"PORT\", 8050))\n",
+    "    app.run(host=\"0.0.0.0\", port=port)"
    ]
   }
  ],
