--- a/gdp_graph_choice.ipynb
+++ b/gdp_graph_choice.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "5b3c236e",
    "metadata": {},
    "outputs": [
@@ -224,6 +224,7 @@
     "import pandas as pd\n",
     "import plotly.express as px\n",
     "import dash_bootstrap_components as dbc\n",
+    "import os\n",
     "from dash import Dash, html, dcc\n",
     "from dash.dependencies import Output, Input\n",
     "from dash.exceptions import PreventUpdate\n",
@@ -236,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "6aa90e60",
    "metadata": {},
    "outputs": [
@@ -335,7 +336,8 @@
     "    raise PreventUpdate\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    app.run()"
+    "    port = int(os.environ.get(\"PORT\", 8050))\n",
+    "    app.run(host=\"0.0.0.0\", port=port)"
    ]
   }
  ],
